--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server/index.js",
@@ -19,10 +18,13 @@
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@babel/core": "^7.23.7",
+    "babel-jest": "^29.7.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "resend": "^2.1.0"
