--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY=
-DOMAIN=Acme <onboarding@resend.dev>
+API_KEY=re_aJWEb7wc_4vHP5F7MEXcAHfQPK7EmW1Ao
+DOMAIN= Acme <onboarding@resend.dev>
 NODE_LOCAL_PORT=3000
 NODE_DOCKER_PORT=3000
