--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "tsc",
     "start": "node dist/server/index.js",
     "dev": "ts-node-dev --poll src/server/index.ts",
-    "test": "jest"
+    "test": "jest --watch",
+    "coverage": "jest --coverage"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jean Carlos Luciano",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
